objects/Legal_Assignment_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Aktiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JAndC_Legal__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>J&amp;C Anwälte</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JC_Legal__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Anwälte Jäger</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JH_Legal__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>H. Jäger</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JHeinrich_Legal__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Heinrich Jäger</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Kainz_Legal__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>A. Kainz</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Krutisch_Legal__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Dominic Krutisch</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lachmair_Legal__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Wilhelm Lachmair</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Legal_Account__c</fullName>
        <label>Legal Account</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VH24</fullName>
                    <default>true</default>
                    <label>VH24</label>
                </value>
                <value>
                    <fullName>VR24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dieselskandal</fullName>
                    <default>true</default>
                    <label>Dieselskandal</label>
                </value>
                <value>
                    <fullName>Lebensversicherung</fullName>
                </value>
                <value>
                    <fullName>Finanzierung</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>todo</description>
    <label>Legal Assignment Setting</label>
    <pluralLabel>Legal Assignment Settings</pluralLabel>
</CustomObject>